tests/fail/registering/def shadowing a term.mmu
(sort s)
(term a () (s ()))
(term b () (s ()))
(def a () (s ()) () b)
